* 优化配置属性

--- a/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-__parentArtifactId__.properties
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-__parentArtifactId__.properties
@@ -6,6 +6,6 @@ model.package=rebue.${parentArtifactId}.mo
 ${symbol_pound}Mapper类的包
 mapper.package=rebue.${parentArtifactId}.mapper
 ${symbol_pound}扫描数据库中的表名
-table.name=${svrNamePrefixCap}_%
+table.name=${projectNameUpperCase}_%
 ${symbol_pound}beetl模板生成文件的模块路径（用在模板的配置文件中指定java生成文件的路径）
 beetl.module.path=rebue/${parentArtifactId}
