--- a/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-comm.properties
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-comm.properties
@@ -2,10 +2,10 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 ${symbol_pound}数据库配置
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc${symbol_escape}:mysql${symbol_escape}://127.0.0.1${symbol_escape}:3306/${parentArtifactId}
-jdbc.username=${parentArtifactId}
-jdbc.password=${parentArtifactId}
+jdbc.driver=${jdbcDriver}
+jdbc.url=${jdbcUrl}
+jdbc.username=${jdbcUser}
+jdbc.password=${jdbcPswd}
 
 ${symbol_pound}生成Model代码的位置
 model.target=../${parentArtifactId}-api/src/main/java
