--- a/src/test/resources/projects/basic/archetype.properties
+++ b/src/test/resources/projects/basic/archetype.properties
@@ -3,5 +3,5 @@ package=it.pkg
 version=0.1-SNAPSHOT
 groupId=archetype.it
 artifactId=basic
-svrNamePrefix=Basic
-svrNamePrefixCap=BASIC
+projectNameCapitalise=Basic
+projectNameUpperCase=BASIC
