* 修正测试端口号写死的Bug * 补充说明如果部署

--- a/src/test/resources/projects/basic/archetype.properties
+++ b/src/test/resources/projects/basic/archetype.properties
@@ -5,3 +5,13 @@ groupId=archetype.it
 artifactId=basic
 projectNameCapitalise=Basic
 projectNameUpperCase=BASIC
+microServerPort=8000
+eurekaUrl=http://127.0.0.1:8761/eureka/
+rabbitmqHost=127.0.0.1
+rabbitmqPort=5672
+rabbitmqUser=guest
+rabbitmqPswd=guest
+jdbcDriver=com.mysql.jdbc.Driver
+jdbcUrl=jdbc:mysql://127.0.0.1:3306/basic?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+jdbcUser=basic
+jdbcPswd=basic
