* RESTFUL请求改为羊肉串风格

--- a/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/beetl.properties
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/beetl.properties
@@ -1,10 +1,16 @@
 #set( $symbol_pound = '#' )
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
-${symbol_pound}语句的定界符号，默认是<% %>，与jsp冲突
+${symbol_pound} 语句的定界符号，默认是<% %>，与jsp冲突
 DELIMITER_STATEMENT_START=<&
 DELIMITER_STATEMENT_END=&>
-${symbol_pound}模板目录（相对classpath的路径）
+${symbol_pound} 模板目录（相对classpath的路径）
 RESOURCE.root=btl/
-${symbol_pound}引入commons-lang3的字符串应用包
+${symbol_pound} 引入commons-lang3的字符串应用包
 FNP.strutils=org.apache.commons.lang3.StringUtils
+
+${symbol_pound} 将驼峰格式转换为羊肉串格式的函数
+FN.kebab=rebue.mbgx.beetl.function.KebabFunction
+
+${symbol_pound} spring工具包
+FNP.sputil=org.beetl.ext.spring.UtilsFunctionPackage
