* 修正配置文件中log不能设为off，而是false的bug

--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-dev.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-dev.yml
@@ -15,7 +15,7 @@ logging:
   level:
     root: info
     rebue: trace
-    com.netflix.discovery: off
+    com.netflix.discovery: false
 
 spring:
   rabbitmq:
