+ 添加自动刷新配置

--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-dev.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-dev.yml
@@ -19,6 +19,9 @@ logging:
     com.netflix.discovery: 'OFF'
 
 spring:
+  cloud:
+    config:
+      enabled: false
   rabbitmq:
       host: ${rabbitmqHost}
       port: ${rabbitmqPort}
