--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-prod.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-prod.yml
@@ -36,6 +36,9 @@ spring:
         enabled: true # 开启消息跟踪
       refresh:
         enabled: true 
+  sleuth:
+    sampler:
+      probability: 1
     
 endpoints:
   bus-refresh:
