--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-prod.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-prod.yml
@@ -23,6 +23,7 @@ spring:
         server-addr: 127.0.0.1:8848
   sleuth:
     sampler:
+      # 将采样比例设置为 1.0，也就是全部都需要。默认是 0.1
       probability: 1
 
 
