--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
 	</scm>
 
 	<properties>
+		<maven-archetype.version>3.1.2</maven-archetype.version>
+		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
 		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
 	</properties>
 
@@ -42,7 +44,7 @@
 			<extension>
 				<groupId>org.apache.maven.archetype</groupId>
 				<artifactId>archetype-packaging</artifactId>
-				<version>3.1.1</version>
+				<version>${maven-archetype.version}</version>
 			</extension>
 		</extensions>
 
@@ -50,12 +52,12 @@
 			<plugins>
 				<plugin>
 					<artifactId>maven-archetype-plugin</artifactId>
-					<version>3.1.1</version>
+					<version>${maven-archetype.version}</version>
 				</plugin>
 				<!-- 设置生成项目时，不要默认排除掉.gitignore文件 -->
 				<plugin>
 					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>${maven-resources-plugin.version}</version>
 					<configuration>
 						<!-- Required so that .gitignore gets included in archetypes -->
 						<!-- see https://issues.apache.org/jira/browse/MRESOURCES-190 -->
