--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/application-prod.yml
@@ -1,9 +1,9 @@
 # 配置中心中的配置
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/${parentArtifactId}?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-    username: ${parentArtifactId}
-    password: ${parentArtifactId}
+    url: ${jdbcUrl}
+    username: ${jdbcUser}
+    password: ${jdbcPswd}
   redis:
     # 最大实例数
     maxTotal: 100
