--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-dev.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-dev.yml
@@ -21,5 +21,7 @@ spring:
         server-addr: ${nacosAddr}
       config:
         server-addr: ${nacosAddr}
+  sleuth:
+    enabled: false
 
 appid: 1
