--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-dev.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-dev.yml
@@ -21,6 +21,8 @@ spring:
         server-addr: ${nacosAddr}
       config:
         server-addr: ${nacosAddr}
+    sentinel:
+      enabled: false
   sleuth:
     enabled: false
 
