--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-prod.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-prod.yml
@@ -18,14 +18,11 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: ${nacosAddr}
+        server-addr: ${nacosUrl}
       config:
-        server-addr: ${nacosAddr}
-    sentinel:
-      # 默认不要开启流控，因为SpringCloud微服务一般都统一在gateway那里控制了
-      enabled: false
-      # transport:
-      #   dashboard: 127.0.0.1:15080
+        server-addr: ${nacosUrl}
+  zipkin:
+    base-url: ${zipkinUrl}
   sleuth:
     sampler:
       # 将采样比例设置为 1.0，也就是全部都需要。默认是 0.1
