--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/pom.xml
@@ -24,6 +24,11 @@
 
 		<dependency>
 			<groupId>com.github.rebue.sbs</groupId>
+			<artifactId>sb-spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.rebue.sbs</groupId>
 			<artifactId>sc-spring-boot-starter</artifactId>
 		</dependency>
 
