+ 添加项目描述参数

--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>${groupId}</groupId>
 	<artifactId>${artifactId}</artifactId>
 	<packaging>pom</packaging>
-	<description>基于Spring CLoud构建微服务的演示项目</description>
+	<description>${projectDescription}</description>
 	<version>${version}</version>
 
 	<modules>
