--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap.yml
@@ -53,6 +53,7 @@ dubbo:
     check: false
   cloud:
     # 默认订阅所有服务，影响性能，需直接指定要订阅的服务，如无可置为空
+    # 请注意，这里去除默认给开发埋了一个雷，如果忘记添加依赖的微服务，启动时会报没有发现依赖的微服务注册的错，很难想到是这里的问题
     subscribed-services:
 
 mybatis:
