--- a/src/test/resources/projects/basic/archetype.properties
+++ b/src/test/resources/projects/basic/archetype.properties
@@ -3,6 +3,7 @@ package=it.pkg
 version=0.1-SNAPSHOT
 groupId=archetype.it
 artifactId=basic
+projectDescription=基于SpringCloud框架的微服务项目
 projectNameCapitalise=Basic
 projectNameUpperCase=BASIC
 microServerPort=8000
@@ -15,3 +16,5 @@ jdbcDriver=com.mysql.jdbc.Driver
 jdbcUrl=jdbc:mysql://127.0.0.1:3306/basic?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 jdbcUser=basic
 jdbcPswd=basic
+nacosUrl=127.0.0.1:8848
+zipkinUrl=127.0.0.1:9411
