--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/pom.xml
@@ -37,6 +37,10 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.mybatis.dynamic-sql</groupId>
+			<artifactId>mybatis-dynamic-sql</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 		</dependency>
