--- a/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-comm.properties
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-comm.properties
@@ -12,11 +12,13 @@ model.target=../${parentArtifactId}-api/src/main/java
 ${symbol_pound}Model类的后缀
 model.suffix=Mo
 ${symbol_pound}字段后缀是配置的值，表示是日期型(记录年月日的信息)
-field.day.suffix=DAY,_DATE
+field.date.suffix=DAY,_DATE
 ${symbol_pound}字段后缀是配置的值，表示是时间型(记录年月日时分秒的信息)
 field.time.suffix=_TIME
+${symbol_pound}字段后缀是配置的值，表示是时间型(记录年月日时分秒的信息)
+field.datetime.suffix=_DATETIME
 
-${symbol_pound}生成Mapper代码及xml的位置
+${symbol_pound}生成Mapper、DynamicSqlSupport的类文件的位置
 mapper.target=../${parentArtifactId}-svr/src/main/java
 
 ${symbol_pound}beetl的配置文件（位于classpath下的路径）
