* 兼容eclipse和idea的路径问题

--- a/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-__parentArtifactId__.properties
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-__parentArtifactId__.properties
@@ -2,9 +2,9 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 ${symbol_pound}Model的包
-model.package=${package}.mo
+model.target.package=${package}.mo
 ${symbol_pound}Mapper类的包
-mapper.package=${package}.mapper
+mapper.target.package=${package}.mapper
 ${symbol_pound}扫描数据库中的表名
 table.name=${projectNameUpperCase}_%
 ${symbol_pound}beetl模板生成文件的模块路径（用在模板的配置文件中指定java生成文件的路径）
