--- a/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-comm.properties
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-gen/src/main/resources/conf/mbg-comm.properties
@@ -7,8 +7,8 @@ jdbc.url=${jdbcUrl}
 jdbc.username=${jdbcUser}
 jdbc.password=${jdbcPswd}
 
-${symbol_pound}生成Model代码的位置
-model.target=../${parentArtifactId}-api/src/main/java
+${symbol_pound}生成Model代码的位置(相对于${parentArtifactId}项目下的路径)
+model.target.project=${parentArtifactId}-api/src/main/java
 ${symbol_pound}Model类的后缀
 model.suffix=Mo
 ${symbol_pound}字段后缀是配置的值，表示是日期型(记录年月日的信息)
@@ -18,8 +18,8 @@ field.time.suffix=_TIME
 ${symbol_pound}字段后缀是配置的值，表示是时间型(记录年月日时分秒的信息)
 field.datetime.suffix=_DATETIME
 
-${symbol_pound}生成Mapper、DynamicSqlSupport的类文件的位置
-mapper.target=../${parentArtifactId}-svr/src/main/java
+${symbol_pound}生成Mapper、DynamicSqlSupport的类文件的位置(相对于${parentArtifactId}项目下的路径)
+mapper.target.project=${parentArtifactId}-svr/src/main/java
 
 ${symbol_pound}beetl的配置文件（位于classpath下的路径）
 beetl.cfg.file=/conf/beetl.properties
