--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.github.rebue.common-pom</groupId>
-		<artifactId>sb-parent</artifactId>
-		<version>1.2.0</version>
-	</parent>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.github.rebue.common-pom</groupId>
+        <artifactId>sb-parent</artifactId>
+        <version>1.2.0</version>
+    </parent>
 
-	<groupId>${groupId}</groupId>
-	<artifactId>${artifactId}</artifactId>
-	<packaging>pom</packaging>
-	<description>${projectDescription}</description>
-	<version>${version}</version>
+    <groupId>${groupId}</groupId>
+    <artifactId>${artifactId}</artifactId>
+    <packaging>pom</packaging>
+    <description>${projectDescription}</description>
+    <version>${version}</version>
 
-	<modules>
-		<module>${rootArtifactId}-gen</module>
-		<module>${rootArtifactId}-api</module>
-		<module>${rootArtifactId}-svr</module>
-	</modules>
+    <modules>
+        <module>${rootArtifactId}-gen</module>
+        <module>${rootArtifactId}-api</module>
+        <module>${rootArtifactId}-svr</module>
+    </modules>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>${groupId}</groupId>
-				<artifactId>${rootArtifactId}-api</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${groupId}</groupId>
+                <artifactId>${rootArtifactId}-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>com.github.shalousun</groupId>
-				<artifactId>smart-doc-maven-plugin</artifactId>
-				<configuration>
-					<projectName>${rootArtifactId}</projectName>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.github.shalousun</groupId>
+                <artifactId>smart-doc-maven-plugin</artifactId>
+                <configuration>
+                    <projectName>${artifactId}</projectName>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
