--- a/src/test/resources/projects/basic/archetype.properties
+++ b/src/test/resources/projects/basic/archetype.properties
@@ -3,6 +3,7 @@ package=it.pkg
 version=0.1-SNAPSHOT
 groupId=archetype.it
 artifactId=basic
+projectChineseName=HLW微服务
 projectDescription=基于SpringCloud框架的微服务项目
 projectNameCapitalise=Basic
 projectNameUpperCase=BASIC
