--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap.yml
@@ -52,7 +52,7 @@ dubbo:
     # Dubbo默认（缺省）会在启动时检查依赖的服务是否可用，不可用时会立即抛出异常，导致服务启动失败
     check: false
   cloud:
-    # 默认订阅所有服务，影响性能，需直接指定要订阅的服务，如无可置为空
+    # 默认订阅所有服务，影响性能，需直接指定要订阅的服务，如无可置为空，如有多个用逗号隔开
     # 请注意，这里去除默认给开发埋了一个雷，如果忘记添加依赖的微服务，启动时会报没有发现依赖的微服务注册的错，很难想到是这里的问题
     subscribed-services:
 
