* 优化配置文件

--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/application-prod.yml
@@ -6,10 +6,10 @@ spring:
   datasource:
     url: ${jdbcUrl}
     username: ${jdbcUser}
-    password: ${jdbcPswd}
+    password: ******
   rabbitmq:
     host: rabbitmq_rabbitmq
     port: 5672
     username: guest
-    password: xxxxxx
+    password: ******
     virtual-host: /
