--- a/pom.xml
+++ b/pom.xml
@@ -1,167 +1,175 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.rebue.archetype</groupId>
-    <artifactId>rebue-archetype</artifactId>
-    <version>1.2.3</version>
-    <packaging>maven-archetype</packaging>
+	<groupId>com.github.rebue.archetype</groupId>
+	<artifactId>rebue-archetype</artifactId>
+	<version>1.2.3</version>
+	<packaging>maven-archetype</packaging>
 
-    <name>rebue-archetype</name>
-    <description>基于Spring CLoud构建微服务的自定义archetype</description>
+	<name>rebue-archetype</name>
+	<description>基于Spring CLoud构建微服务的自定义archetype</description>
 
-    <url>https://github.com/rebue/archetype</url>
+	<url>https://github.com/rebue/archetype</url>
 
-    <developers>
-        <developer>
-            <name>zhangbaizi</name>
-            <email>nnzbz@163.com</email>
-        </developer>
-    </developers>
+	<developers>
+		<developer>
+			<name>zhangbaizi</name>
+			<email>nnzbz@163.com</email>
+		</developer>
+	</developers>
 
-    <licenses>
-        <license>
-            <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
-        </license>
-    </licenses>
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
 
-    <scm>
-        <connection>scm:git:https://github.com/rebue/archetype</connection>
-        <developerConnection>scm:git:https://github.com/rebue/archetype.git</developerConnection>
-        <url>https://github.com/rebue/archetype.git</url>
-    </scm>
+	<scm>
+		<connection>scm:git:https://github.com/rebue/archetype</connection>
+		<developerConnection>scm:git:https://github.com/rebue/archetype.git</developerConnection>
+		<url>https://github.com/rebue/archetype.git</url>
+	</scm>
 
-    <properties>
-        <maven-archetype.version>3.1.2</maven-archetype.version>
-        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
-        <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
+	<properties>
+		<maven-archetype.version>3.1.2</maven-archetype.version>
+		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
 
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-    <build>
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.archetype</groupId>
-                <artifactId>archetype-packaging</artifactId>
-                <version>${maven-archetype.version}</version>
-            </extension>
-        </extensions>
+	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.archetype</groupId>
+				<artifactId>archetype-packaging</artifactId>
+				<version>${maven-archetype.version}</version>
+			</extension>
+		</extensions>
 
-        <plugins>
-            <plugin>
-                <artifactId>maven-archetype-plugin</artifactId>
-                <version>${maven-archetype.version}</version>
-            </plugin>
-            <!-- 设置生成项目时，不要默认排除掉.gitignore文件 -->
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>${maven-resources-plugin.version}</version>
-                <configuration>
-                    <!-- Required so that .gitignore gets included in archetypes -->
-                    <!-- see https://issues.apache.org/jira/browse/MRESOURCES-190 -->
-                    <addDefaultExcludes>false</addDefaultExcludes>
-                </configuration>
-            </plugin>
+		<plugins>
+			<plugin>
+				<artifactId>maven-archetype-plugin</artifactId>
+				<version>${maven-archetype.version}</version>
+			</plugin>
+			<!-- 设置生成项目时，不要默认排除掉.gitignore文件 -->
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>${maven-resources-plugin.version}</version>
+				<configuration>
+					<!-- Required so that .gitignore gets included in archetypes -->
+					<!-- see https://issues.apache.org/jira/browse/MRESOURCES-190 -->
+					<addDefaultExcludes>false</addDefaultExcludes>
+				</configuration>
+			</plugin>
 
-            <!-- 创建源码包 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+			<!-- 创建源码包 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 
-            <!-- 创建文档包 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven-javadoc-plugin.version}</version>
-                <configuration>
-                    <!-- 不检查JavaDoc规范 -->
-                    <!-- <doclint>none</doclint> -->
-                    <!-- <additionalparam>-Xdoclint:none</additionalparam> -->
-                    <tags>
-                        <tag>
-                            <name>mbg.generated</name>
-                            <!-- todo tag for all places -->
-                            <placement>a</placement>
-                            <head>mybatis自动生成的代码</head>
-                        </tag>
-                    </tags>
-                </configuration>
-                <!-- javadoc插件默认不运行，要绑定到MAven的生命周期阶段中 -->
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+			<!-- 创建文档包 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc-plugin.version}</version>
+				<configuration>
+					<!-- 不检查JavaDoc规范 -->
+					<!-- <doclint>none</doclint> -->
+					<!-- <additionalparam>-Xdoclint:none</additionalparam> -->
+					<tags>
+						<tag>
+							<name>mbg.generated</name>
+							<!-- todo tag for all places -->
+							<placement>a</placement>
+							<head>mybatis自动生成的代码</head>
+						</tag>
+					</tags>
+				</configuration>
+				<!-- javadoc插件默认不运行，要绑定到MAven的生命周期阶段中 -->
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
-    <profiles>
-        <profile>
-            <id>deploy-private</id>
-            <!-- 部署私服 -->
-            <distributionManagement>
-                <snapshotRepository>
-                    <id>my-snapshots</id>
-                    <name>my-snapshots</name>
-                    <url>${my-snapshots.url}</url>
-                    <uniqueVersion>true</uniqueVersion>
-                </snapshotRepository>
-                <repository>
-                    <id>my-releases</id>
-                    <name>my-releases</name>
-                    <url>${my-releases.url}</url>
-                </repository>
-            </distributionManagement>
-        </profile>
+	<profiles>
+		<profile>
+			<id>deploy-private</id>
+			<!-- 部署私服 -->
+			<distributionManagement>
+				<snapshotRepository>
+					<id>my-snapshots</id>
+					<name>my-snapshots</name>
+					<url>${my-snapshots.url}</url>
+					<uniqueVersion>true</uniqueVersion>
+				</snapshotRepository>
+				<repository>
+					<id>my-releases</id>
+					<name>my-releases</name>
+					<url>${my-releases.url}</url>
+				</repository>
+			</distributionManagement>
+		</profile>
 
-        <profile>
-            <id>deploy-public</id>
-            <!-- 部署中央仓库 -->
-            <distributionManagement>
-                <snapshotRepository>
-                    <id>oss</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-                </snapshotRepository>
-                <repository>
-                    <id>oss</id>
-                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-            </distributionManagement>
+		<profile>
+			<id>deploy-public</id>
+			<!-- 部署中央仓库 -->
+			<distributionManagement>
+				<snapshotRepository>
+					<id>oss</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+				</snapshotRepository>
+				<repository>
+					<id>oss</id>
+					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+				</repository>
+			</distributionManagement>
 
-            <build>
-                <plugins>
-                    <!-- 部署时用GPG数字签名 -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+			<build>
+				<plugins>
+					<!-- 部署时用GPG数字签名 -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+								<configuration>
+									<!-- 指定密钥的名称(可能会有多个生成的密钥) -->
+									<keyname>${gpg.keyname}</keyname>
+									<!-- 如果gpg服务有密钥，在settings.xml文件中配置 -->
+									<passphraseServerId>gpg</passphraseServerId>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
