--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/db-change-log.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/db-change-log.yml
@@ -6,7 +6,7 @@ databaseChangeLog:
       changes:
         - sqlFile:
             encoding: utf8
-            path: classpath:db-change-log/000-create-table.sql
+            path: classpath:db/change-log/000-create-table.sql
         - sqlFile:
             encoding: utf8
-            path: classpath:db-change-log/000-init.sql
+            path: classpath:db/change-log/000-init.sql
